--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -9,11 +9,11 @@ body {
 }
 
 .bg-head {
-  background: linear-gradient(rgba(11, 22, 44, 0.9),rgba(6, 19, 43, 0.9)), url('../images/bg.jpg');
+  background: linear-gradient(rgba(11, 22, 44, 0.4),rgba(6, 19, 43, 0.4)), url('../images/bg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
  padding: 100px 0;
- height: 100vh;
+ height: 100%;
 
 }
 .container {
@@ -25,6 +25,10 @@ h1 {
     font-family: 'Poppins', sans-serif;
     text-transform: capitalize;
     
+}
+
+section {
+  padding: 6rem 0;
 }
 .header {
   color: #fff;
@@ -54,14 +58,15 @@ h1 {
 
 .countdown-item {
     color: #ffffff;
-    font-size: 40px;
+    font-size: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     line-height: 30px;
-    margin: 10px;
-    padding-top: 10px;
+    margin: 15px;
+    padding: 50px;
+    padding-top: 70px;
     position: relative;
     width: 100px;
     height: 100px;
@@ -69,7 +74,7 @@ h1 {
 
 .countdown-item span {
     color: #ffffff;
-    font-size: 40px;
+    margin: 10px 0;
     font-size: 13px;
     font-weight: 600;
     text-transform: uppercase;
@@ -83,3 +88,12 @@ h1 {
   height: 300px;
 }
 
+.cta-register {
+  padding: 8px 70px;
+}
+
+
+.stats {
+  color: #fff;
+  font-size: 1.8rem !important;
+}
